# AxonML

./: .gitignore  AxonML_DB_Init.sh  Axonml_Architecture.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  axonml-dashboard-architecture.md  axonml_dataset_integration.md  clippy.toml  dataset_service.py  ecosystem.config.js  progress.txt
crates/axonml/: Cargo.toml  README.md
crates/axonml-audio/: Cargo.toml  README.md
crates/axonml-audio/src/: datasets.rs  lib.rs  transforms.rs
crates/axonml-autograd/: Cargo.toml  README.md
crates/axonml-autograd/src/: amp.rs  backward.rs  checkpoint.rs  grad_fn.rs  graph.rs  lib.rs  no_grad.rs  variable.rs
crates/axonml-autograd/src/functions/: activation.rs  basic.rs  linalg.rs  loss.rs  mod.rs
crates/axonml-cli/: Cargo.toml  README.md
crates/axonml-cli/src/: api_client.rs  cli.rs  config.rs  error.rs  main.rs
crates/axonml-cli/src/commands/: analyze.rs  bench.rs  convert.rs  dashboard.rs  data.rs  dataset.rs  eval.rs  export.rs  gpu.rs  hub.rs  init.rs  inspect.rs  kaggle.rs  load.rs  mod.rs  new.rs  predict.rs  quant.rs  rename.rs  report.rs  resume.rs  scaffold.rs  serve.rs  sync.rs  train.rs  tui.rs  upload.rs  utils.rs  wandb.rs  wandb_client.rs  zip.rs
crates/axonml-cli/tests/: cli_integration_test.rs
crates/axonml-core/: Cargo.toml  README.md
crates/axonml-core/examples/: gpu_test.rs
crates/axonml-core/src/: allocator.rs  device.rs  dtype.rs  error.rs  lib.rs  storage.rs
crates/axonml-core/src/backends/: cpu.rs  cuda.rs  gpu_tests.rs  metal.rs  mod.rs  vulkan.rs  wgpu_backend.rs
crates/axonml-dashboard/: Cargo.toml  README.md  Trunk.toml  index.html
crates/axonml-dashboard/assets/: styles.css
crates/axonml-dashboard/src/: api.rs  lib.rs  state.rs  types.rs
crates/axonml-dashboard/src/auth/: login.rs  mfa.rs  mfa_setup.rs  mod.rs  session.rs
crates/axonml-dashboard/src/components/: charts.rs  forms.rs  icons.rs  mod.rs  modal.rs  navbar.rs  progress.rs  sidebar.rs  spinner.rs  table.rs  terminal.rs  toast.rs
crates/axonml-dashboard/src/pages/: dashboard.rs  landing.rs  mod.rs
crates/axonml-dashboard/src/utils/: mod.rs  webauthn.rs
crates/axonml-data/: Cargo.toml  README.md
crates/axonml-data/src/: collate.rs  dataloader.rs  dataset.rs  lib.rs  sampler.rs  transforms.rs
crates/axonml-distributed/: Cargo.toml  README.md
crates/axonml-distributed/src/: backend.rs  comm.rs  ddp.rs  fsdp.rs  lib.rs  pipeline.rs  process_group.rs
crates/axonml-fusion/: Cargo.toml  README.md
crates/axonml-fusion/src/: elementwise.rs  error.rs  lib.rs  linear.rs  optimizer.rs  patterns.rs
crates/axonml-jit/: Cargo.toml  README.md
crates/axonml-jit/src/: cache.rs  codegen.rs  compile.rs  error.rs  ir.rs  lib.rs  optimize.rs  trace.rs
crates/axonml-llm/: Cargo.toml  README.md
crates/axonml-llm/src/: attention.rs  bert.rs  config.rs  embedding.rs  error.rs  generation.rs  gpt2.rs  hf_loader.rs  hub.rs  lib.rs  llama.rs  mistral.rs  phi.rs  state_dict.rs  tokenizer.rs  transformer.rs
crates/axonml-nn/: Cargo.toml  README.md
crates/axonml-nn/src/: activation.rs  functional.rs  init.rs  lib.rs  loss.rs  module.rs  parameter.rs  sequential.rs
crates/axonml-nn/src/layers/: attention.rs  conv.rs  dropout.rs  embedding.rs  linear.rs  mod.rs  norm.rs  pooling.rs  rnn.rs
crates/axonml-onnx/: Cargo.toml  README.md
crates/axonml-onnx/src/: error.rs  export.rs  lib.rs  model.rs  operators.rs  parser.rs  proto.rs
crates/axonml-onnx/tests/: pooling_tests.rs
crates/axonml-optim/: Cargo.toml  README.md
crates/axonml-optim/src/: adam.rs  grad_scaler.rs  lamb.rs  lib.rs  lr_scheduler.rs  optimizer.rs  rmsprop.rs  sgd.rs
crates/axonml-profile/: Cargo.toml  README.md
crates/axonml-profile/src/: bottleneck.rs  compute.rs  error.rs  lib.rs  memory.rs  report.rs  timeline.rs
crates/axonml-quant/: Cargo.toml  README.md
crates/axonml-quant/src/: calibration.rs  dequantize.rs  error.rs  lib.rs  quantize.rs  types.rs
crates/axonml-serialize/: Cargo.toml  README.md
crates/axonml-serialize/src/: checkpoint.rs  convert.rs  format.rs  lib.rs  state_dict.rs
crates/axonml-server/: Cargo.toml  README.md
crates/axonml-server/src/: config.rs  email.rs  main.rs
crates/axonml-server/src/api/: auth.rs  builtin_datasets.rs  data.rs  datasets.rs  hub.rs  inference.rs  kaggle.rs  metrics.rs  mod.rs  models.rs  notebooks.rs  system.rs  terminal.rs  tools.rs  training.rs
crates/axonml-server/src/auth/: jwt.rs  middleware.rs  mod.rs  recovery.rs  totp.rs  webauthn.rs
crates/axonml-server/src/db/: datasets.rs  mod.rs  models.rs  notebooks.rs  runs.rs  schema.rs  users.rs
crates/axonml-server/src/inference/: metrics.rs  mod.rs  pool.rs  server.rs
crates/axonml-server/src/llm/: mod.rs  ollama.rs
crates/axonml-server/src/secrets/: env.rs  mod.rs  vault.rs
crates/axonml-server/src/training/: executor.rs  mod.rs  notebook_executor.rs  tracker.rs  websocket.rs
crates/axonml-server/static/: axonml-dashboard-384fd97eb6f5b22a.js  axonml-dashboard-384fd97eb6f5b22a_bg.wasm  index.html  styles-44ef90624144e72d.css
crates/axonml-server/tests/: api_admin.rs  api_auth.rs  api_data.rs  api_inference.rs  api_models.rs  api_training.rs  api_user.rs  e2e_user_flows.rs
crates/axonml-server/tests/common/: mod.rs
crates/axonml-tensor/: Cargo.toml  README.md
crates/axonml-tensor/src/: creation.rs  lib.rs  shape.rs  sparse.rs  tensor.rs  view.rs
crates/axonml-tensor/src/ops/: mod.rs
crates/axonml-text/: Cargo.toml  README.md
crates/axonml-text/src/: lib.rs  tokenizer.rs  vocab.rs
crates/axonml-tui/: Cargo.toml  README.md
crates/axonml-tui/src/: app.rs  event.rs  lib.rs  theme.rs  ui.rs
crates/axonml-vision/: Cargo.toml  README.md
crates/axonml-vision/src/: hub.rs  lib.rs  transforms.rs
crates/axonml/examples/: hvac_inference.rs  hvac_model.rs  hvac_training.rs  mnist_training.rs  nlp_audio_test.rs  simple_training.rs
crates/axonml/src/: benchmark.rs  hub.rs  lib.rs  trainer.rs
crates/axonml/tests/: integration_test.rs
docs/: _config.yml  (+7 more)
(+71 files in other folders)
