[package]
name = "axonml-dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web dashboard for AxonML Machine Learning Framework"
keywords = ["machine-learning", "dashboard", "wasm", "leptos", "ml"]
categories = ["web-programming", "wasm", "gui"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlFormElement",
    "Storage",
    "Location",
    "History",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "Blob",
    "FileReader",
    "File",
    "FileList",
    "FormData",
    "Response",
    "Headers",
    "RequestInit",
    "Request",
    "Crypto",
    "console",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "Navigator",
    "Clipboard",
    "DragEvent",
    "DataTransfer",
] }
js-sys = "0.3"

# HTTP client
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-storage = "0.3"
gloo-file = "0.3"
gloo-console = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["wasmbind", "serde"] }

# Encoding
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

# Error handling
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
