[package]
name = "axonml-nn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Neural network modules for Axonml ML framework"
readme = "README.md"

[dependencies]
axonml-core.workspace = true
axonml-tensor.workspace = true
axonml-autograd.workspace = true
parking_lot.workspace = true
rand = "0.8"

[dev-dependencies]
