[package]
name = "axonml-optim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Optimizers and learning rate schedulers for the Axonml ML framework"

[dependencies]
axonml-core.workspace = true
axonml-tensor.workspace = true
axonml-autograd.workspace = true
axonml-nn.workspace = true
