[package]
name = "axonml-serialize"
version = "0.1.0"
edition = "2021"
description = "Model serialization for Axonml ML framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/automatanexus/ferrite"
keywords = ["machine-learning", "serialization", "deep-learning"]
categories = ["science", "data-structures"]

[dependencies]
axonml-core = { path = "../axonml-core" }
axonml-tensor = { path = "../axonml-tensor" }
axonml-nn = { path = "../axonml-nn" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Optional formats
safetensors = { version = "0.3", optional = true }

[features]
default = []
safetensors = ["dep:safetensors"]

[dev-dependencies]
tempfile = "3.0"
