[package]
name = "axonml-serialize"
version.workspace = true
edition = "2021"
description = "Model serialization for Axonml ML framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/automatanexus/ferrite"
keywords = ["machine-learning", "serialization", "deep-learning"]
categories = ["science", "data-structures"]

[dependencies]
axonml-core.workspace = true
axonml-tensor.workspace = true
axonml-nn.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Optional formats
safetensors = { version = "0.3", optional = true }

[features]
default = []
safetensors = ["dep:safetensors"]

[dev-dependencies]
tempfile = "3.0"
