[package]
name = "axonml-serialize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Model serialization for Axonml ML framework"
readme = "README.md"
keywords = ["machine-learning", "serialization", "deep-learning"]
categories = ["science", "data-structures"]

[dependencies]
axonml-core.workspace = true
axonml-tensor.workspace = true
axonml-nn.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Optional formats
safetensors = { version = "0.3", optional = true }

[features]
default = []
safetensors = ["dep:safetensors"]

[dev-dependencies]
tempfile = "3.0"
