[package]
name = "axonml-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API server for AxonML Machine Learning Framework"
keywords = ["machine-learning", "api", "server", "ml", "dashboard"]
categories = ["web-programming::http-server", "science"]

[[bin]]
name = "axonml-server"
path = "src/main.rs"

[dependencies]
# AxonML crates for model inference
axonml-core = { path = "../axonml-core" }
axonml-tensor = { path = "../axonml-tensor" }
axonml-autograd = { path = "../axonml-autograd" }
axonml-nn = { path = "../axonml-nn" }
axonml-serialize = { path = "../axonml-serialize" }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# WebAuthn (simplified - using manual implementation)
# webauthn-rs requires specific features

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = { version = "0.14", features = ["toml"] }
toml = "0.8"
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# HTTP client (for Aegis-DB connection)
reqwest = { version = "0.12", features = ["json"] }

# Multipart file upload
multer = "3.0"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"

# Image processing (for QR codes)
qrcode = { version = "0.14", features = ["image"] }

# System information
sysinfo = "0.31"
rustc_version_runtime = "0.3"
num_cpus = "1.16"

# GPU support
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

# Half-precision floats
half = "2.4"
urlencoding = "2.1.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
# Integration test dependencies (reuse from main deps)
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full", "test-util"] }
