[package]
name = "axonml-tui"
version = "0.1.0"
edition = "2021"
authors = ["AutomataNexus Development Team"]
description = "Terminal User Interface for Axonml ML Framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/automatanexus/ferrite"
keywords = ["machine-learning", "tui", "terminal", "deep-learning"]
categories = ["command-line-interface", "visualization"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# File system utilities
dirs = "5.0"

# Axonml crates
axonml-core = { path = "../axonml-core" }
axonml-tensor = { path = "../axonml-tensor" }
axonml-nn = { path = "../axonml-nn" }
axonml-serialize = { path = "../axonml-serialize" }

[dev-dependencies]
tempfile = "3.0"
