[package]
name = "axonml-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Terminal User Interface for Axonml ML Framework"
readme = "README.md"
keywords = ["machine-learning", "tui", "terminal", "deep-learning"]
categories = ["command-line-interface", "visualization"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# File system utilities
dirs = "5.0"

# Axonml crates
axonml-core.workspace = true
axonml-tensor.workspace = true
axonml-nn.workspace = true
axonml-serialize.workspace = true

[dev-dependencies]
tempfile = "3.0"
